--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -894,7 +894,7 @@ RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
     rm /var/log/lastlog /var/log/faillog
 
-USER laradock
+USER root
 
 # Set default work directory
 WORKDIR /var/www
