--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -29,6 +29,35 @@ server {
         include fastcgi_params;
     }
 
+    ######
+    # lara-test
+    ##
+    location /wifi-manager {
+        alias /var/www/wifi-marketeer/wifi-manager/public;
+        try_files $uri $uri/ @wifi-manager;
+
+        location ~ \.php$ {
+            # try_files $uri /index.php =404;
+            fastcgi_pass php-upstream;
+            #fastcgi_pass lara-test;
+            fastcgi_index index.php;
+            fastcgi_buffers 16 16k;
+            fastcgi_buffer_size 32k;
+            #fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            #fixes timeouts
+            fastcgi_read_timeout 600;
+            include fastcgi_params;
+        }
+
+        error_log /var/log/nginx/wifi-manager_error.log;
+        access_log /var/log/nginx/wifi-manager_access.log;
+    }
+
+    location @wifi-manager {
+        rewrite /wifi-manager/(.*)$ /wifi-manager/index.php?/$1 last;
+    }
+
     location ~ /\.ht {
         deny all;
     }
